# bigml-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
bigml/: Cargo.toml  README.md
bigml-parallel/: Cargo.toml  README.md
bigml-parallel/src/: execution_input.rs  line_delimited_json_codec.rs  main.rs
bigml-parallel/tests/: tests.rs
bigml/examples/: create_execution.rs  create_source.rs
bigml/src/: client.rs  errors.rs  lib.rs  progress.rs  wait.rs
bigml/src/resource/: batchcentroid.rs  batchprediction.rs  cluster.rs  dataset.rs  ensemble.rs  evaluation.rs  id.rs  library.rs  mod.rs  script.rs  source.rs  status.rs
bigml/src/resource/execution/: args.rs  execution_status.rs  mod.rs
bigml_derive/: Cargo.toml  README.md
bigml_derive/src/: lib.rs  resource.rs  updatable.rs
examples/: create_execution.rs  create_source.rs
src/: client.rs  errors.rs  lib.rs  multipart_form_data.rs  progress.rs  serde_types.in.rs  serde_types.rs  util.rs  wait.rs
src/resource/: batchcentroid.rs  batchprediction.rs  cluster.rs  dataset.rs  ensemble.rs  evaluation.rs  execution.rs  id.rs  library.rs  mod.rs  script.rs  source.rs  status.rs
src/resource/execution/: args.rs  execution_status.rs  mod.rs
