[package]
name = "bigml"
version = "0.0.6"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "BigML client bindings (WORK IN PROGRESS, unstable Rust)"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://docs.rs/bigml/"

[features]
postgresql = ["postgres"]

[dev-dependencies]
env_logger = "0.4"

[dependencies]
chrono = { version = "0.3", features = ["serde"] }
error-chain = "0.9"
lazy_static = "0.2.2"
log = "0.3.6"
mime = "0.2.2"
postgres = { version = "0.13.3", optional = true }
reqwest = { version = "0.4.0", git = "https://github.com/faradayio/reqwest", branch = "sized_body" }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
url = "1.2.3"
uuid = { version = ">=0.2.0, <0.5.0", features = ["v4"] }
