[package]
name = "bigml"
version = "0.2.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Unofficial BigML client bindings"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://docs.rs/bigml/"

edition = "2018"

[dev-dependencies]
env_logger = "0.6"

[dependencies]
bigml_derive = { version = "0.2", path = "bigml_derive" }
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1.1"
lazy_static = "1.3"
log = "0.4"
mime = "0.3"
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "1.2"
uuid = { version = ">=0.5.0, <0.8.0", features = ["v4"] }
