[package]
name = "bigml-parallel"
version = "0.9.2"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "CLI tool for executing multiple BigML scripts in parallel"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://github.com/faradayio/bigml-rs/tree/master/bigml-parallel"

[dev-dependencies]
cli_test_dir = "0.1.5"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
bigml = { version = "=0.9.2", path = "../bigml" }
bytes = "1.0.1"
# This makes the executable bigger, but it makes --help much nicer.
clap = { version = "2", features = ["wrap_help"] }
futures = "0.3.1"
tracing = "0.1.29"
regex = "1.3.7"
serde = { version = "1" }
serde_json = "1.0"
# This is pretty heavyweight, but it's easy to set up and nice for users.
structopt = "0.3.4"
tokio = { version = "1.0.1", features = ["fs", "io-std", "rt-multi-thread"] }
tokio-util = { version = "0.6.1", features = ["codec"] }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
