[package]
name = "bigml-parallel"
version = "1.0.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "CLI tool for executing multiple BigML scripts in parallel"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://github.com/faradayio/bigml-rs/tree/master/bigml-parallel"
maintenance = { status = "as-is" }

[dev-dependencies]
cli_test_dir = "0.1.5"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
bigml = { version = "=1.0.0", path = "../bigml" }
bytes = "1.0.1"
# This makes the executable bigger, but it makes --help much nicer.
clap = { version = "4", features = ["wrap_help", "derive"] }
futures = "0.3.1"
tracing = "0.1.29"
regex = "1.3.7"
serde = { version = "1" }
serde_json = "1.0"
tokio = { version = "1.24.2", features = ["fs", "io-std", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
