[package]
name = "bigml"
version = "0.6.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Unofficial BigML client bindings"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://docs.rs/bigml/"

edition = "2018"

[dev-dependencies]
env_logger = "0.7"

[dependencies]
bigml_derive = { version = "0.3.0", path = "../bigml_derive" }
bytes = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1.1"
futures = "0.3.1"
log = "0.4"
mime = "0.3"
reqwest = { version = "0.10", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.6", features = ["fs", "macros"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
url = "2.1"
