[package]
name = "bigml"
version = "0.8.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Unofficial BigML client bindings"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://docs.rs/bigml/"

edition = "2018"

[dev-dependencies]
env_logger = "0.9.0"
# We also require this below, but _without_ `rt-multi-thread`.
tokio = { version = "1.0.1", features = ["fs", "macros", "rt-multi-thread"] }

[dependencies]
bigml_derive = { version = "0.4.0", path = "../bigml_derive" }
bytes = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1.1"
futures = "0.3.1"
log = "0.4"
mime = "0.3"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls-native-roots", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0.1", features = ["fs", "macros"] }
tokio-util = { version = "0.6.1", features = ["codec"] }
url = "2.1"
