[package]
name = "bigml"
version = "1.0.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Unofficial BigML client bindings"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://docs.rs/bigml/"
maintenance = { status = "as-is" }

edition = "2018"

[dev-dependencies]
anyhow = "1.0.51"
# We also require this below, but _without_ `rt-multi-thread`.
tokio = { version = "1.0.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

[dependencies]
bigml_derive = { version = "0.4.1", path = "../bigml_derive" }
bytes = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.1"
mime = "0.3"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls-native-roots", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.29"
tracing-futures = "0.2.5"
thiserror = "1.0.30"
tokio = { version = "1.0.1", features = ["fs", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
url = "2.1"
