[package]
name = "bigml_derive"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Internal `derive` support for unofficial BigML client bindings"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://docs.rs/bigml/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.6"
syn = "0.14.8"
