[package]
name = "bigml_derive"
version = "0.4.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Internal `derive` support for unofficial BigML client bindings"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/bigml-rs"
documentation = "https://docs.rs/bigml/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = "1.0.8"
